force-app/main/default/objects/simplesurvey__Survey__c/fields/Account_Id_18_Char__c.field-meta.xml
<CustomField>
    <fullName>Account_Id_18_Char__c</fullName>
    <formula>simplesurvey__Account__r.Account_ID_18_Char__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Id (18 Char)</label>
    <type>Text</type>
</CustomField>