force-app/main/default/objects/simplesurvey__Survey__c/fields/Acquired_Business_Employees__c.field-meta.xml
<CustomField>
    <fullName>Acquired_Business_Employees__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>Does the acquired business have employees?</inlineHelpText>
    <label>Acquired Business Employees?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>