force-app/main/default/objects/simplesurvey__Survey__c/fields/Acquisition_or_Merger__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_or_Merger__c</fullName>
    <inlineHelpText>Has your company recently been acquired, acquired another company, or merged with another entity?</inlineHelpText>
    <label>Acquisition or Merger?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Our company was acquired</fullName>
            </value>
            <value>
                <fullName>Our company acquired another company</fullName>
            </value>
            <value>
                <fullName>Our company merged with another company</fullName>
            </value>
            <value>
                <fullName>None of the above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>