force-app/main/default/objects/simplesurvey__Survey__c/fields/Add_On_Product__c.field-meta.xml
<CustomField>
    <fullName>Add_On_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Add-On Product</label>
    <referenceTo>Add_On_Products__c</referenceTo>
    <relationshipLabel>Simple Surveys</relationshipLabel>
    <relationshipName>Simple_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>