force-app/main/default/objects/simplesurvey__Survey__c/fields/AdditionalPayrollFrequency__c.field-meta.xml
<CustomField>
    <fullName>AdditionalPayrollFrequency__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>Please confirm up to 2 additional payroll frequencies (if applicable)</inlineHelpText>
    <label>Additional_Payroll_Frequency</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Semi-Monthly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-Annual</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Commission or Bonuses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>