force-app/main/default/objects/simplesurvey__Survey__c/fields/ADPSoftware__c.field-meta.xml
<CustomField>
    <fullName>ADPSoftware__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>Please verify the ADP Software your company uses (Run, Workforce, etc)</inlineHelpText>
    <label>ADP_Software</label>
    <length>255</length>
    <type>Text</type>
</CustomField>