force-app/main/default/objects/simplesurvey__Survey__c/fields/Advisor_General_Thoughts__c.field-meta.xml
<CustomField>
    <fullName>Advisor_General_Thoughts__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>Any final thoughts you’d like to share, e.g., improvements or features/services you&apos;d like us to add?</inlineHelpText>
    <label>Advisor General Thoughts</label>
    <type>TextArea</type>
</CustomField>