force-app/main/default/objects/simplesurvey__Survey__c/fields/Advisor_Hosting_Interest__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Hosting_Interest__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>Would you like to be a featured host of one of our retirement planning seminars for either plan sponsors or participants?</inlineHelpText>
    <label>Advisor Hosting Interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>