force-app/main/default/objects/simplesurvey__Survey__c/fields/Advisor_NPS__c.field-meta.xml
<CustomField>
    <fullName>Advisor_NPS__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>On a scale of 1-10 (10 being most likely), how likely would you be to recommend Ubiquity to a client or a colleague?</inlineHelpText>
    <label>Advisor NPS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>