force-app/main/default/objects/simplesurvey__Survey__c/fields/Advisor_Services__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Services__c</fullName>
    <inlineHelpText>What services are you interested in for your clients? For example, asset management like Morningstar or CensiblyYours, IRA&apos;s, HSA&apos;s, calculator tools, etc.</inlineHelpText>
    <label>Advisor Services</label>
    <type>TextArea</type>
</CustomField>