force-app/main/default/objects/simplesurvey__Survey__c/fields/Advisor_UBQT_Experience__c.field-meta.xml
<CustomField>
    <fullName>Advisor_UBQT_Experience__c</fullName>
    <inlineHelpText>What have you liked most about your Ubiquity experience that we should continue?</inlineHelpText>
    <label>Advisor - UBQT Experience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Multiple plan types that fit my clients&apos; needs</fullName>
            </value>
            <value>
                <fullName>Platform ease of use</fullName>
            </value>
            <value>
                <fullName>Low fees</fullName>
            </value>
            <value>
                <fullName>Speed of answering my questions</fullName>
            </value>
            <value>
                <fullName>Effectiveness of answering my questions</fullName>
            </value>
            <value>
                <fullName>Helpful content so I can self-service</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>