force-app/main/default/objects/simplesurvey__Survey__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>What is your age range?</inlineHelpText>
    <label>Age</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>18-24</fullName>
            </value>
            <value>
                <fullName>25-34</fullName>
            </value>
            <value>
                <fullName>35-44</fullName>
            </value>
            <value>
                <fullName>45-54</fullName>
            </value>
            <value>
                <fullName>55-64</fullName>
            </value>
            <value>
                <fullName>65 or older</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>