force-app/main/default/objects/simplesurvey__Survey__c/fields/Associated_Contact__c.field-meta.xml
<CustomField>
    <fullName>Associated_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated Contact associated with the Survey</description>
    <label>Associated Contact</label>
    <referenceTo>Associated_Contact__c</referenceTo>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>