force-app/main/default/objects/simplesurvey__Survey__c/fields/Availability_to_Set_Up_Plan__c.field-meta.xml
<CustomField>
    <fullName>Availability_to_Set_Up_Plan__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>If needed, how available will you be over the next several weeks to help set up your plan?</inlineHelpText>
    <label>Availability to Set Up Plan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High availability (can quickly provide any needed information and join in calls easily)</fullName>
            </value>
            <value>
                <fullName>Moderate availability (can participate but expect several days turnaround time)</fullName>
            </value>
            <value>
                <fullName>Low availability (have limited to no time)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>