force-app/main/default/objects/simplesurvey__Survey__c/fields/BiggestChallengeToSave__c.field-meta.xml
<CustomField>
    <fullName>BiggestChallengeToSave__c</fullName>
    <inlineHelpText>What are your biggest challenges to saving more in your 401(k) for retirement? Select all that apply.</inlineHelpText>
    <label>BiggestChallengeToSave</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>General life expenses</fullName>
            </value>
            <value>
                <fullName>Income limitations</fullName>
            </value>
            <value>
                <fullName>Paying down debt</fullName>
            </value>
            <value>
                <fullName>Emergency circumstances</fullName>
            </value>
            <value>
                <fullName>Lack of knowledge</fullName>
            </value>
            <value>
                <fullName>My company does not offer a match</fullName>
            </value>
            <value>
                <fullName>Annual contribution limits</fullName>
            </value>
            <value>
                <fullName>I use a separate IRA instead</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>