force-app/main/default/objects/simplesurvey__Survey__c/fields/BizIntelSOPSample__c.field-meta.xml
<CustomField>
    <fullName>BizIntelSOPSample__c</fullName>
    <inlineHelpText>BizIntel SOP Sample</inlineHelpText>
    <label>BizIntel_SOP_Sample</label>
    <length>255</length>
    <type>Text</type>
</CustomField>