force-app/main/default/objects/simplesurvey__Survey__c/fields/Case_Team__c.field-meta.xml
<CustomField>
    <fullName>Case_Team__c</fullName>
    <description>New field to use on reports to determine case team. We should deprecate this field, it is duplicative and unhelpful</description>
    <formula>IF(NOT(ISBLANK(Implementation__c )), &quot;Implementations&quot;,   simplesurvey__Case__r.Case_Team_New__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Do not use</inlineHelpText>
    <label>Case Team</label>
    <type>Text</type>
</CustomField>