force-app/main/default/objects/simplesurvey__Survey__c/fields/CertifiedNotice__c.field-meta.xml
<CustomField>
    <fullName>CertifiedNotice__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>Would you like us to send certified notices to your ex-employee(s) prior to forcing-out their balance (required by law)?</inlineHelpText>
    <label>CertifiedNotice</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes: I want Ubiquity to mail my ex-employee(s) a notice ($10 fee per notice).</fullName>
            </value>
            <value>
                <fullName>No: I (sponsor/trustee) will send the certified notice to my ex-employee(s) myself.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>