force-app/main/default/objects/simplesurvey__Survey__c/fields/CertNoticeNameList__c.field-meta.xml
<CustomField>
    <fullName>CertNoticeNameList__c</fullName>
    <inlineHelpText>If you elect option A or B, list the names of ex-employee(s) you would like Ubiquity to send certified notices to:</inlineHelpText>
    <label>SendNoticeNamesList</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>