force-app/main/default/objects/simplesurvey__Survey__c/fields/Chat_Transcript__c.field-meta.xml
<CustomField>
    <fullName>Chat_Transcript__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Chat Transcript associated with the Survey</description>
    <label>Chat Transcript</label>
    <referenceTo>LiveChatTranscript</referenceTo>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>