force-app/main/default/objects/simplesurvey__Survey__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <inlineHelpText>City</inlineHelpText>
    <label>Physical City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>