force-app/main/default/objects/simplesurvey__Survey__c/fields/Commission_Bonus_Variable_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Commission_Bonus_Variable_Frequency__c</fullName>
    <inlineHelpText>Confirm frequency of Commissions, Bonuses, and/or Variable Pay (Select all that apply)</inlineHelpText>
    <label>Commission Bonus Variable Frequency</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-weekly</fullName>
            </value>
            <value>
                <fullName>Semi-monthly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi Annually</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>