force-app/main/default/objects/simplesurvey__Survey__c/fields/Commissions_Bonus_Variable_Pay__c.field-meta.xml
<CustomField>
    <fullName>Commissions_Bonus_Variable_Pay__c</fullName>
    <inlineHelpText>Does compensation include commissions, bonuses or variable pay?</inlineHelpText>
    <label>Commissions Bonus Variable Pay?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>