force-app/main/default/objects/simplesurvey__Survey__c/fields/Company_payroll_contact__c.field-meta.xml
<CustomField>
    <fullName>Company_payroll_contact__c</fullName>
    <inlineHelpText>Confirm name, email and phone for person at your company responsible for processing payroll</inlineHelpText>
    <label>Company payroll contact</label>
    <type>TextArea</type>
</CustomField>