force-app/main/default/objects/simplesurvey__Survey__c/fields/Compliance__c.field-meta.xml
<CustomField>
    <fullName>Compliance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Compliance associated with the Survey</description>
    <label>Compliance</label>
    <referenceTo>Compliance__c</referenceTo>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>