force-app/main/default/objects/simplesurvey__Survey__c/fields/Contact_Id_18_Char__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id_18_Char__c</fullName>
    <formula>simplesurvey__Contact__r.Contact_ID_18_Char__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Id (18 Char)</label>
    <type>Text</type>
</CustomField>