force-app/main/default/objects/simplesurvey__Survey__c/fields/Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role__c</fullName>
    <description>Contact Role of Contact related to the survey.</description>
    <formula>TEXT(simplesurvey__Contact__r.Role__c)</formula>
    <inlineHelpText>Contact Role of Contact related to the survey.</inlineHelpText>
    <label>Contact Role</label>
    <type>Text</type>
</CustomField>