force-app/main/default/objects/simplesurvey__Survey__c/fields/Contacttolearnmoreaboutfeedback__c.field-meta.xml
<CustomField>
    <fullName>Contacttolearnmoreaboutfeedback__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>Could we contact you to learn more about your feedback?</inlineHelpText>
    <label>Contact_to_learn_more_about_feedback</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>