force-app/main/default/objects/simplesurvey__Survey__c/fields/Current_EE_500_to_1000_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Current_EE_500_to_1000_Hrs__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>Do you currently have any employees that work at least 500 hours but less than 1000 hours?</inlineHelpText>
    <label>Current EE 500 to 1,000 Hrs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>