force-app/main/default/objects/simplesurvey__Survey__c/fields/Current_lawsuits__c.field-meta.xml
<CustomField>
    <fullName>Current_lawsuits__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>Is your firm involved in any ongoing lawsuits | legal proceedings?</inlineHelpText>
    <label>Current lawsuits?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>