force-app/main/default/objects/simplesurvey__Survey__c/fields/Current_Payroll_Provider_Software__c.field-meta.xml
<CustomField>
    <fullName>Current_Payroll_Provider_Software__c</fullName>
    <inlineHelpText>Please confirm your current payroll provider or payroll software - Select One</inlineHelpText>
    <label>Current Payroll Provider _ Software</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-2-3 Payroll &amp; Hr Services, Inc.</fullName>
            </value>
            <value>
                <fullName>Aap - American Automated Payroll</fullName>
            </value>
            <value>
                <fullName>Abacus Advisors</fullName>
            </value>
            <value>
                <fullName>Abco Payroll Services Inc.</fullName>
            </value>
            <value>
                <fullName>Accuchex Corporation</fullName>
            </value>
            <value>
                <fullName>Accupay Payroll</fullName>
            </value>
            <value>
                <fullName>Adp - Complete Payroll + Hr</fullName>
            </value>
            <value>
                <fullName>Adp - Enhanced Payroll</fullName>
            </value>
            <value>
                <fullName>Adp - Essential Payroll</fullName>
            </value>
            <value>
                <fullName>ADP – Run</fullName>
            </value>
            <value>
                <fullName>Adp - Work Force Now</fullName>
            </value>
            <value>
                <fullName>Advanced Payroll Consultants, Inc.</fullName>
            </value>
            <value>
                <fullName>Advantage Payroll Svc</fullName>
            </value>
            <value>
                <fullName>Advantage Payroll Svc (Alabama)</fullName>
            </value>
            <value>
                <fullName>Algentis (Payroll)</fullName>
            </value>
            <value>
                <fullName>Amcheck</fullName>
            </value>
            <value>
                <fullName>Ameripay, Inc.</fullName>
            </value>
            <value>
                <fullName>Apex Hcm</fullName>
            </value>
            <value>
                <fullName>Appleone Payroll Services</fullName>
            </value>
            <value>
                <fullName>Aps (Automatic Payroll Systems)</fullName>
            </value>
            <value>
                <fullName>Ascentis</fullName>
            </value>
            <value>
                <fullName>Atlantic Counseling Group - Tpa</fullName>
            </value>
            <value>
                <fullName>Austin-Gregg Corp</fullName>
            </value>
            <value>
                <fullName>Bamboohr</fullName>
            </value>
            <value>
                <fullName>Baron Payroll</fullName>
            </value>
            <value>
                <fullName>Bbsi (Barrett Business Services, Inc.)</fullName>
            </value>
            <value>
                <fullName>Bcbsil</fullName>
            </value>
            <value>
                <fullName>Benifit Mall</fullName>
            </value>
            <value>
                <fullName>Best Life &amp; Health</fullName>
            </value>
            <value>
                <fullName>Big Fish Payroll</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>