force-app/main/default/objects/simplesurvey__Survey__c/fields/Date_of_Acquisition__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Acquisition__c</fullName>
    <inlineHelpText>Confirm the Date of Acquisition</inlineHelpText>
    <label>Date of Acquisition</label>
    <type>Date</type>
</CustomField>