force-app/main/default/objects/simplesurvey__Survey__c/fields/Do_you_have_any_additional_questions__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_any_additional_questions__c</fullName>
    <inlineHelpText>Do you have any additional questions?</inlineHelpText>
    <label>Do you have any additional questions?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>