force-app/main/default/objects/simplesurvey__Survey__c/fields/Duplicate_Survey__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If you think this survey record is a duplicate, check this box.</description>
    <inlineHelpText>If you think this survey record is a duplicate, check this box.</inlineHelpText>
    <label>Duplicate Survey</label>
    <type>Checkbox</type>
</CustomField>