force-app/main/default/objects/simplesurvey__Survey__c/fields/EE_and_Owner_on_Same_Frequency__c.field-meta.xml
<CustomField>
    <fullName>EE_and_Owner_on_Same_Frequency__c</fullName>
    <inlineHelpText>Are employees and owners paid on the same frequency?</inlineHelpText>
    <label>EE and Owner on Same Frequency?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>