force-app/main/default/objects/simplesurvey__Survey__c/fields/Employee_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Employee_Compensation__c</fullName>
    <inlineHelpText>What type of compensation do your employees received (Select all that apply)</inlineHelpText>
    <label>Employee Compensation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>W-2 Compensation</fullName>
            </value>
            <value>
                <fullName>1099 Independent Contractors</fullName>
            </value>
            <value>
                <fullName>Commission</fullName>
            </value>
            <value>
                <fullName>Variable Pay</fullName>
            </value>
            <value>
                <fullName>Bonus</fullName>
            </value>
            <value>
                <fullName>Severance Pay</fullName>
            </value>
            <value>
                <fullName>K-1 Compensation</fullName>
            </value>
            <value>
                <fullName>Schedule C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>