force-app/main/default/objects/simplesurvey__Survey__c/fields/Enrollment_Effectiveness__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Effectiveness__c</fullName>
    <inlineHelpText>How effective was the 401(k) Enrollment/Education Meeting  in showing you why and how to use your 401(k) plan?.   1=Not At All Effective and 5 = Very Effective</inlineHelpText>
    <label>Enrollment Effectiveness</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>