force-app/main/default/objects/simplesurvey__Survey__c/fields/Enrollment_Effectiveness_Calc__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Effectiveness_Calc__c</fullName>
    <formula>IF( TEXT(Enrollment_Effectiveness__c )=&quot;1&quot;, 1, 
(IF(TEXT(Enrollment_Effectiveness__c ) =&quot;2&quot;, 2, 
(IF(TEXT(Enrollment_Effectiveness__c ) =&quot;3&quot;, 3,
(IF(TEXT(Enrollment_Effectiveness__c ) =&quot;4&quot;, 4,
5)))))))</formula>
    <label>Enrollment Effectiveness Calc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>