force-app/main/default/objects/simplesurvey__Survey__c/fields/Enrollment_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Meeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrollment Meeting</label>
    <referenceTo>Enrollment_Meeting__c</referenceTo>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>