force-app/main/default/objects/simplesurvey__Survey__c/fields/Enrollment_Meeting_Valuable_Info__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Meeting_Valuable_Info__c</fullName>
    <inlineHelpText>What was most helpful/valuable?</inlineHelpText>
    <label>Enrollment Meeting Valuable Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>