force-app/main/default/objects/simplesurvey__Survey__c/fields/Enrollment_Missing_Info__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Missing_Info__c</fullName>
    <inlineHelpText>What was unclear or missing?</inlineHelpText>
    <label>Enrollment Missing Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>