force-app/main/default/objects/simplesurvey__Survey__c/fields/EPS_2020_Annual_Contribution__c.field-meta.xml
<CustomField>
    <fullName>EPS_2020_Annual_Contribution__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>Does your company intend to fund annual employer contributions for the plan year 2020?</inlineHelpText>
    <label>EPS 2020 Annual Contribution?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>