force-app/main/default/objects/simplesurvey__Survey__c/fields/EPS_Additional_Headings__c.field-meta.xml
<CustomField>
    <fullName>EPS_Additional_Headings__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>On your current Payroll Detail File, are there any other additional headers used? i.e. Additional labeling for ‘Catch Up’ contributions, if your % and fixed amounts are separated into two different columns or if you have multiple columns for total hours</inlineHelpText>
    <label>EPS Additional Headings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>