force-app/main/default/objects/simplesurvey__Survey__c/fields/EPS_Additional_QuestionsComments__c.field-meta.xml
<CustomField>
    <fullName>EPS_Additional_QuestionsComments__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>Do you have additional questions or comments for your Ubiquity Payroll (K)oncierge?</inlineHelpText>
    <label>EPS Additional Questions/Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>