force-app/main/default/objects/simplesurvey__Survey__c/fields/EPS_Loan_Heading__c.field-meta.xml
<CustomField>
    <fullName>EPS_Loan_Heading__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>On your current Payroll Detail File, what is the header name of the LOAN* source? *Loan = Employee 401k Loan repayment payroll contribution deductions</inlineHelpText>
    <label>EPS Loan Heading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>