force-app/main/default/objects/simplesurvey__Survey__c/fields/EPS_Match_Heading__c.field-meta.xml
<CustomField>
    <fullName>EPS_Match_Heading__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>On your current Payroll Detail File, what is the header name of the MATCH* source? *Match = Employer Company Basic Match payroll contribution deductions</inlineHelpText>
    <label>EPS Match Heading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>