force-app/main/default/objects/simplesurvey__Survey__c/fields/EPS_Multiple_Payroll_Sched__c.field-meta.xml
<CustomField>
    <fullName>EPS_Multiple_Payroll_Sched__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>Do you have more than one payroll schedule? i.e. Hourly employees vs Salaried employees paid on different dates with different pay periods</inlineHelpText>
    <label>EPS Multiple Payroll Sched</label>
    <length>255</length>
    <type>Text</type>
</CustomField>