force-app/main/default/objects/simplesurvey__Survey__c/fields/EPS_Off_Cycle__c.field-meta.xml
<CustomField>
    <fullName>EPS_Off_Cycle__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>Do you run any ‘off-cycle’ payrolls? We will need to be notified of ALL ‘off-cycle’ payrolls you run within your payroll platform so that we know to pull the file and upload it. *Off-cycle = A bonus check, new hire employee single pay period, etc.</inlineHelpText>
    <label>EPS Off Cycle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>