force-app/main/default/objects/simplesurvey__Survey__c/fields/EPS_Pay_Detail_File__c.field-meta.xml
<CustomField>
    <fullName>EPS_Pay_Detail_File__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>In your Payroll Providers platform, what is the name of your Payroll Details file?</inlineHelpText>
    <label>EPS Pay Detail File</label>
    <length>255</length>
    <type>Text</type>
</CustomField>