force-app/main/default/objects/simplesurvey__Survey__c/fields/EPS_Payroll_Provider__c.field-meta.xml
<CustomField>
    <fullName>EPS_Payroll_Provider__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>Who is your current Payroll Provider? i.e ADP Run, Gusto</inlineHelpText>
    <label>EPS Payroll Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>