force-app/main/default/objects/simplesurvey__Survey__c/fields/EPS_Payroll_Schedule__c.field-meta.xml
<CustomField>
    <fullName>EPS_Payroll_Schedule__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>What is your current Payroll Schedule? i.e bi-weekly, semi-monthly</inlineHelpText>
    <label>EPS Payroll Schedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>